--- a/nicecss.scss
+++ b/nicecss.scss
@@ -12,6 +12,7 @@
 @import "utils/graph";
 @import "utils/layout";
 @import "utils/utilities";
+@import "utils/responsive";
 
 @import "base/normalize";
 @import "base/helpers";
